projeto quase concluído

--- a/horario.html
+++ b/horario.html
@@ -3,11 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        * {
+            font-family: Arial, Helvetica, sans-serif;
+            padding: 0;
+            margin: 0;
+        }
+
+        .header {
+            border-bottom: solid 1px grey;
+        }
+
+         .nav > ul > li > a {
+            text-decoration: none;
+        }
+
+        .footer {
+            background-color: #B0C4DE;
+            text-align: center;
+            margin-top: 300px;
+        }
+    </style>
     <title>ApoiUS - Horários</title>
 </head>
 <body>
     <div class="header">
-        <img src="" alt="Horários de atendimento">
+        <img src="imagens/imagem1.jpg" alt="Horários de atendimento" width="300">
+    </div>
+
+    <div class="nav">
+        <ul>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="horario.html">Horários</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </div><br>
+
+    <div class="content">
+        <h1>Nossos Serviços</h1><br>
+        <p>- A <b>ApoiUS Odontologia</b> oferece tratamentos completos para cuidar do seu sorriso de forma acessível e de qualidade. Confira nossos principais serviços, com seus valores e os respectivos dias da semana!</p><br>
+
+        <table border="2" class="tabela">
+            <tr>
+                <th>Serviços</th>
+                <th>Valores</th> 
+                <th>Dia-Semana</th>
+            </tr>
+
+            <tr>
+                <td>Prevenção e Limpeza</td>
+                <td>R$ 200,00</td>
+                <td>Segunda-Feira</td>
+            </tr>
+
+            <tr>
+                <td>Clareamento dental</td>
+                <td>R$ 330,00</td>
+                <td>Terça-Feira</td>
+            </tr>
+
+            <tr>
+                <td>Odontopediatria</td>
+                <td>R$ 150,00</td>
+                <td>Quarta-Feira</td>
+            </tr>
+
+            <tr>
+                <td>Implantes Dentários</td>
+                <td>R$ 400,00</td>
+                <td>Quinta-Feira</td>
+            </tr>
+
+            <tr>
+                <td>Tratamento de Canal</td>
+                <td>R$ 180,00</td>
+                <td>Sexta-Feira</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="footer">
+        <p>Todos os direitos reservados a Victor Robles</p>
     </div>
 </body>
 </html>
