--- a/sobre.html
+++ b/sobre.html
@@ -25,14 +25,14 @@
 </head>
 <body>
     <div class="header">
-        <img src="imagens/imagem1.jpg" alt="Imagens de agendamento" width="400px">
+        <img src="imagens/imagem3.jpg" alt="Imagens de agendamento" width="400px">
     </div>
 
     <div class="nav">
         <ul>
             <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="#">Horários</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="horario.html">Horários</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
     </div><br>
 
@@ -43,12 +43,17 @@
         <h2>Nossa Missão</h2>
         <p>Na ApoiUS, acreditamos que um sorriso saudável transforma vidas. Por isso, nos dedicamos a proporcionar tratamentos personalizados, com técnicas atualizadas e materiais de alta qualidade, sempre visando o conforto e a satisfação dos nossos pacientes.</p><br>
 
-        <h2>Nossos Valores</h2>
-        <ul>
-            <li>nome</li>
-            <li>robles</li>
-            <li>carmo</li>
-        </ul>
+        <h2>Nossos Valores</h2><br>
+            <ul>
+                <li>Ética e transparência – Priorizamos um atendimento claro e honesto, com explicações detalhadas sobre cada procedimento.</li><br>
+                <li>Excelência profissional – Nossa equipe é composta por dentistas especializados e em constante atualização.</li><br>
+                <li>Tecnologia avançada – Utilizamos equipamentos modernos para diagnósticos precisos e tratamentos eficientes.</li><br>
+            </ul>
+
+        <h2>Nossa Equipe</h2>
+        <p>Contamos com profissionais experientes e especializados em diversas áreas da odontologia, comprometidos em oferecer um atendimento personalizado e resultados naturais e duradouros.
+
+            Na <b>ApoiUS Odontologia</b>, seu sorriso está em boas mãos. <b>Agende sua consulta e venha conhecer o nosso diferencial!</b></p><br>
     </div>
 
     <div class="footer">
