--- a/main.html
+++ b/main.html
@@ -34,8 +34,8 @@
             <div class="nav">
                 <ul>
                     <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="#">Horários</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="horario.html">Horários</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div><br>
         
