projeto concluído de fato

--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
 
          .nav > ul > li > a {
             text-decoration: none;
-        }
+         }
 
         .footer {
             background-color: #B0C4DE;
@@ -37,6 +37,14 @@
 <body>
     <div class="header">
         <img src="imagens/imagem4.jpg" alt="Imagem de Clínica Odontológica" width="300">
+    </div><br><br>
+
+    <div class="nav">
+        <ul>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="horario.html">Horários</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
     </div><br><br>
     
     <div class="contato">
